create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3483,24 +3483,9 @@ body {
   color: #767676;
 }
 .cid-qUDKOvBjXd .mbr-text DIV {
-  text-align: center;
+  text-align: left;
 }
 .cid-qUDKOvBjXd .mbr-text {
-  text-align: center;
-}
-.cid-qUDKOvncsE {
-  padding-top: 60px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-qUDKOvncsE .mbr-text,
-.cid-qUDKOvncsE blockquote {
-  color: #767676;
-}
-.cid-qUDKOvncsE .mbr-text DIV {
-  text-align: center;
-}
-.cid-qUDKOvncsE .mbr-text {
   text-align: center;
 }
 .cid-qUDKOw5Big {
